--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = 'http://nidrahs.github.io'
+theme="paper"
+baseURL = 'https://nidrahs.github.io'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
